# ml-notebooks

./: .gitignore  pyproject.toml
notebooks/dlwp/: c2pg23 - MNIST Classification.ipynb  c3pg85 - Tensorflow.ipynb  c4pg134 - IMDB Sentiment Binary Classification.ipynb  c4pg134 - IMDB Sentiment Classifier.ipynb  c4pg148 - Reuters Topic Multiclass Classification.ipynb  c4pg160 - California Housing.ipynb  c5pg174 - MNIST with Noise.ipynb
notebooks/homl/: Chapter 10.ipynb
